--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,31 +8,39 @@
     <script type="text/javascript" src="http://jqueryrotate.googlecode.com/svn/trunk/jQueryRotate.js"></script>
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
-    <script>
-
-        // $("#box").click(
-        //   function () {
-        //      $("box").hide()
-        //   }
-        // )
-
-        $( document ).ready(function() {
-          //alert("what the fuck?");
-          // $('.container').animate({marginLeft: "-=550px", marginTop: "-=550px"}, 1000);
-          // $("#throw").hide()
-          var position = $("#throw").offset();
-          var bpos = $(".navbar").offset();
-          $("#throw").css({left:-400, top:-700});
-          $("#throw").rotate(-200);
-          $("#throw").rotate({animateTo:0})
-          $('#throw').animate({ left: "0px",
-            top:  "0px",
-            }, 600);
-          // $('#throw').rotate({ angle:360,animateTo:0,easing: $.easing.easeOutExpo })
-
-        });
-
-      </script>
+    <% if session[:show_deal_top] %>
+      <script>
+          $( document ).ready(function() {
+            $("#throw").css({left:-300, top:-400});
+            $("#throw").rotate(-200);
+            $("#throw").rotate({duration:900, animateTo:0,
+              callback: function(){
+                //alert('what?')
+                //$( document ).forms["player_action"].submit();
+                var form = document.createElement("form");
+                form.setAttribute("method", "post");
+                form.setAttribute("action", "/game/player_action");
+                document.body.appendChild(form);
+                form.submit();
+              }
+            })
+            $('#throw').animate({ left: "0px",
+              top:  "0px",
+              }, 600);
+          });
+        </script>
+      <% else %>
+        <script>
+          $( document ).ready(function() {
+            $("#throw").css({left:-400, top:-700});
+            $("#throw").rotate(-200);
+            $("#throw").rotate({duration:900, animateTo:0})
+            $('#throw').animate({ left: "0px",
+              top:  "0px",
+              }, 600);
+          });
+        </script>
+      <% end %>
 
   </head>
 
